--- a/src/css/answer.css
+++ b/src/css/answer.css
@@ -1,14 +1,30 @@
 .answer{
-    background-color: #161B22;
-    height:100vh;
+    /* flex:1; */
+    background-color: #010409;
+    min-height: 100vh;
+
+}
+.answer__container{
+    width:80%;
+    margin: auto;
+    padding: 10px;
 }
 
-.answer__container{
-   padding: 10px;
+.answer__container>.answer__form>h1{
+    color: white;
+    /* text-align: justify; */
+
+}
+
+.answer__container>.answer__form>small{
+    color:lightgrey;
+    display: inline-block;
+    margin-bottom: 10px;
+    text-align: justify;
 }
 
 .answer__form>textarea{
-    width: 95%;
+    width:100%;
     height: 300px;
     border-radius: 5px;
     border: 1px solid grey;
@@ -25,4 +41,29 @@
     font-weight: 400;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 10px;
+} 
+
+.answer__container>form > button{
+    background-color: lightgreen !important;
+}
+
+.answer__already{
+    width:80%;
+    margin: auto;
+    padding: 10px;
+}
+
+
+.answer__form > input {
+    padding: 5px;
+    width: 100%;
+    outline-width: 0;
+    border: 1px solid grey;
+    border-radius: 5px;
+    height: 25px;
+    background-color: transparent;
+    /* background-color: #010409; */
+    color: lightgray;
+    margin-bottom: 10px;
+
 }
