--- a/src/css/Language.css
+++ b/src/css/Language.css
@@ -1,6 +1,8 @@
 .language{
      background-color: #0D1117;
-     height:max-content;
+     /* height:max-content; */
+    min-height: 100vh;
+
 }
 
 .language__type{
