--- a/src/css/Ask.css
+++ b/src/css/Ask.css
@@ -20,7 +20,7 @@
     border-radius: 5px;
     width:70%;
     padding: 10px;
-    height: 90%;
+    /* height: 90%; */
     margin-bottom: 10px;
 }
 
